# src/main/java/ch/cern/todo/controller/TodoController.java
@@ -4,6 +4,7 @@ package ch.cern.todo.controller;
 import ch.cern.todo.error.NotImplementedException;
 import ch.cern.todo.openapi.api.TodoApi;
 import ch.cern.todo.openapi.model.AddTodoRequest;
+import ch.cern.todo.openapi.model.SearchTodosRequest;
 import ch.cern.todo.openapi.model.Todo;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
@@ -25,8 +26,18 @@ public class TodoController implements TodoApi {
     }
 
     @Override
-    public ResponseEntity<List<Todo>> findTodos(Todo todo) {
-        throw new NotImplementedException("findTodos is not yet implemented");
+    public ResponseEntity<List<Todo>> getMyTodos() {
+        return TodoApi.super.getMyTodos();
+    }
+
+    @Override
+    public ResponseEntity<List<Todo>> searchMyTodos() {
+        return TodoApi.super.searchMyTodos();
+    }
+
+    @Override
+    public ResponseEntity<List<Todo>> searchTodos(SearchTodosRequest searchTodosRequest) {
+        return TodoApi.super.searchTodos(searchTodosRequest);
     }
 
     @Override
